--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "ffmpeg-stream",
   "version": "0.2.1",
   "description": "Stream-based media transcoding",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "mocha --compilers coffee:coffee-script/register"
+    "test": "gulp",
+    "prepublish": "gulp"
   },
   "repository": {
     "type": "git",
@@ -30,10 +32,17 @@
     "chai": "^2.3.0",
     "coffee-script": "~1.9.2",
     "is-mime": "^0.2.0",
-    "mocha": "~2.2.4"
+    "gulp-mocha": "~2.1.3",
+    "gulp-coffee": "~2.3.1",
+    "gulp-util": "~3.0.6",
+    "gulp": "~3.9.0",
+    "chai-as-promised": "~5.1.0",
+    "mkdirp": "~0.5.1",
+    "rimraf": "~2.4.2"
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "sync-exec": "^0.5.0"
+    "tmp": "0.0.26",
+    "bluebird": "~2.9.34"
   }
 }
