--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
   ],
   "main": "lib",
   "scripts": {
-    "test": "gulp",
-    "prepublish": "gulp"
+    "prepare": "tsc",
+    "test": "gulp"
   },
   "devDependencies": {
     "chai": "^2.3.0",
-    "coffee-script": "~1.9.2",
-    "is-mime": "^0.3.0",
-    "gulp-mocha": "~2.1.3",
-    "gulp-coffee": "~2.3.1",
-    "gulp-util": "~3.0.6",
-    "gulp": "~3.9.0",
     "chai-as-promised": "~5.1.0",
+    "coffee-script": "~1.9.2",
+    "gulp": "~3.9.0",
+    "gulp-coffee": "~2.3.1",
+    "gulp-mocha": "~2.1.3",
+    "gulp-util": "~3.0.6",
+    "is-mime": "^0.3.0",
     "mkdirp": "~0.5.1",
-    "rimraf": "~2.4.2"
+    "rimraf": "~2.4.2",
+    "typescript": "^3.5.3"
   },
   "dependencies": {
     "debug": "^2.2.0"
