--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "gulp"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
     "@types/node": "^12.7.2",
     "chai": "^2.3.0",
     "chai-as-promised": "~5.1.0",
