--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "test": "run-s test:*",
     "test:eslint": "eslint --ext js,ts .",
     "test:prettier": "prettier --check \"**/*.{js,ts,json}\"",
-    "test:tsc": "tsc",
-    "test:gulp": "gulp"
+    "test:tsc": "tsc --noEmit",
+    "test:jest": "jest --coverage"
+  },
+  "jest": {
+    "preset": "ts-jest"
   },
   "husky": {
     "hooks": {
@@ -42,25 +45,23 @@
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
+    "@types/jest": "^24.0.18",
+    "@types/mkdirp": "^0.5.2",
     "@types/node": "^12.7.2",
+    "@types/rimraf": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
-    "chai": "^2.3.0",
-    "chai-as-promised": "~5.1.0",
-    "coffee-script": "~1.9.2",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
-    "gulp": "~3.9.0",
-    "gulp-coffee": "~2.3.1",
-    "gulp-mocha": "~2.1.3",
-    "gulp-util": "~3.0.6",
     "husky": "^3.0.4",
     "is-mime": "^0.3.0",
+    "jest": "^24.9.0",
     "lint-staged": "^9.2.2",
     "mkdirp": "~0.5.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "rimraf": "~2.4.2",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.5.3"
   },
   "dependencies": {
