--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,14 +16,22 @@
     "project": "./tsconfig.json"
   },
   "rules": {
+    "@typescript-eslint/consistent-type-definitions": ["error", "interface"],
     "@typescript-eslint/member-ordering": "error",
     "@typescript-eslint/no-floating-promises": "error",
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/prefer-readonly": "error",
+    "@typescript-eslint/promise-function-async": "error",
     "@typescript-eslint/restrict-plus-operands": "error",
+    "@typescript-eslint/strict-boolean-expressions": [
+      "error",
+      { "ignoreRhs": true }
+    ],
+    "eqeqeq": ["error", "smart"],
     "func-style": ["error", "declaration"],
     "id-length": "error",
     "no-else-return": "error",
+    "no-extra-boolean-cast": "off",
     "no-implicit-coercion": "error",
     "no-nested-ternary": "error",
     "no-var": "error",
