--- a/package.json
+++ b/package.json
@@ -51,20 +51,20 @@
     "@types/rimraf": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint": "^6.2.2",
+    "eslint-config-prettier": "^6.1.0",
     "husky": "^3.0.4",
     "is-mime": "^0.3.0",
     "jest": "^24.9.0",
-    "lint-staged": "^9.2.2",
+    "lint-staged": "^9.2.5",
     "mkdirp": "~0.5.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
-    "rimraf": "~2.4.2",
+    "rimraf": "^3.0.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "debug": "^2.2.0"
+    "debug": "^4.1.1"
   }
 }
