--- a/package.json
+++ b/package.json
@@ -14,24 +14,57 @@
   ],
   "main": "lib",
   "scripts": {
-    "test": "gulp",
-    "prepublish": "gulp"
+    "prepare": "tsc",
+    "test": "run-s test:*",
+    "test:eslint": "eslint --ext js,ts .",
+    "test:prettier": "prettier --check \"**/*.{js,ts,json}\"",
+    "test:tsc": "tsc --noEmit",
+    "test:jest": "jest --coverage"
+  },
+  "jest": {
+    "preset": "ts-jest"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,json}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{js,ts}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "prettier": {
+    "semi": false,
+    "trailingComma": "all"
   },
   "devDependencies": {
-    "chai": "^2.3.0",
-    "coffee-script": "~1.9.2",
+    "@types/debug": "^4.1.5",
+    "@types/jest": "^24.0.18",
+    "@types/mkdirp": "^0.5.2",
+    "@types/node": "^12.7.2",
+    "@types/rimraf": "^2.0.2",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
+    "eslint": "^6.2.2",
+    "eslint-config-prettier": "^6.1.0",
+    "husky": "^3.0.4",
     "is-mime": "^0.3.0",
-    "gulp-mocha": "~2.1.3",
-    "gulp-coffee": "~2.3.1",
-    "gulp-util": "~3.0.6",
-    "gulp": "~3.9.0",
-    "chai-as-promised": "~5.1.0",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.2.5",
     "mkdirp": "~0.5.1",
-    "rimraf": "~2.4.2"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.18.2",
+    "rimraf": "^3.0.0",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.3"
   },
   "dependencies": {
-    "debug": "^2.2.0",
-    "tmp": "0.0.26",
-    "bluebird": "~2.9.34"
+    "debug": "^4.1.1"
   }
 }
