--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,6 @@
     "prettier/@typescript-eslint"
   ],
   "parserOptions": {
-    "createDefaultProgram": true,
     "project": "./tsconfig.json"
   },
   "rules": {
@@ -23,24 +22,13 @@
     "@typescript-eslint/prefer-readonly": "error",
     "@typescript-eslint/promise-function-async": "error",
     "@typescript-eslint/restrict-plus-operands": "error",
-    "@typescript-eslint/strict-boolean-expressions": [
-      "error",
-      { "ignoreRhs": true }
-    ],
+    "@typescript-eslint/strict-boolean-expressions": "error",
     "eqeqeq": ["error", "smart"],
     "func-style": ["error", "declaration"],
     "id-length": "error",
-    "lines-between-class-members": [
-      "warn",
-      "always",
-      { "exceptAfterSingleLine": true }
-    ],
     "no-else-return": "error",
     "no-extra-boolean-cast": "off",
     "no-implicit-coercion": "error",
-    "no-nested-ternary": "error",
-    "no-var": "error",
-    "prefer-const": "error",
     "require-unicode-regexp": "error",
     "yoda": "error"
   }
