--- a/package.json
+++ b/package.json
@@ -35,40 +35,39 @@
   },
   "lint-staged": {
     "*.{js,ts,json}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "*.{js,ts}": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
   "prettier": {
-    "semi": false,
-    "trailingComma": "all"
+    "arrowParens": "avoid",
+    "printWidth": 100,
+    "semi": false
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
-    "@types/jest": "^24.0.23",
-    "@types/mkdirp": "^0.5.2",
-    "@types/node": "^12.12.14",
-    "@types/rimraf": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "^2.9.0",
-    "@typescript-eslint/parser": "^2.9.0",
-    "eslint": "^6.7.1",
-    "eslint-config-prettier": "^6.7.0",
-    "husky": "^3.1.0",
+    "@types/jest": "^26.0.15",
+    "@types/mkdirp": "^1.0.1",
+    "@types/node": "^14.14.7",
+    "@types/rimraf": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "husky": "^4.3.0",
     "is-mime": "^0.3.0",
-    "jest": "^24.9.0",
-    "lint-staged": "^9.5.0",
-    "mkdirp": "~0.5.1",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.0",
-    "ts-jest": "^24.2.0",
-    "typescript": "^3.7.2"
+    "prettier": "^2.1.2",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
-    "debug": "^4.1.1"
+    "debug": "^4.2.0"
   }
 }
