--- a/package.json
+++ b/package.json
@@ -15,32 +15,15 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "prepare": "tsc -p tsconfig.build.json --declaration --outDir lib/",
-    "test": "run-s test:*",
-    "test:eslint": "eslint --ext js,ts .",
-    "test:prettier": "prettier --check \"**/*.{js,ts,json}\"",
-    "test:tsc": "tsc --noEmit",
-    "test:jest": "jest --coverage"
+    "prepare": "tsc -p tsconfig.build.json",
+    "fix": "eslint --fix . && prettier --write .",
+    "test": "jest --coverage && tsc --noEmit && eslint . && prettier --check ."
   },
   "files": [
     "lib"
   ],
   "jest": {
     "preset": "ts-jest"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "npm test"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts,json,md}": [
-      "prettier --write"
-    ],
-    "*.{js,ts}": [
-      "eslint --fix"
-    ]
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -56,13 +39,9 @@
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "husky": "^8.0.3",
     "is-mime": "^0.3.0",
     "jest": "^26.6.3",
-    "lint-staged": "^13.2.1",
     "mkdirp": "^1.0.4",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.4.4",
