--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,16 @@
 {
-  "env": {
-    "es6": true,
-    "node": true
-  },
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+    "plugin:@typescript-eslint/recommended-type-checked"
   ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
   "rules": {
-    "@typescript-eslint/consistent-type-imports": "warn",
-    "@typescript-eslint/member-ordering": "error",
-    "@typescript-eslint/method-signature-style": "error",
-    "@typescript-eslint/prefer-readonly": "error",
-    "@typescript-eslint/promise-function-async": "error",
     "@typescript-eslint/strict-boolean-expressions": "error",
     "eqeqeq": ["error", "smart"],
     "no-else-return": "error",
-    "no-extra-boolean-cast": "off",
-    "no-implicit-coercion": "error",
-    "require-unicode-regexp": "error",
-    "yoda": "error"
+    "no-implicit-coercion": "error"
   }
 }
