--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lib"
   ],
   "jest": {
-    "preset": "ts-jest"
+    "preset": "ts-jest/presets/default-esm"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -32,20 +32,16 @@
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
-    "@types/jest": "^26.0.15",
-    "@types/mkdirp": "^1.0.1",
-    "@types/node": "^14.14.7",
-    "@types/rimraf": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
-    "eslint": "^7.13.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.9",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "eslint": "^8.57.0",
     "is-mime": "^0.3.0",
-    "jest": "^26.6.3",
-    "mkdirp": "^1.0.4",
-    "prettier": "^2.1.2",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.0.5"
+    "jest": "^29.7.0",
+    "prettier": "^3.3.2",
+    "ts-jest": "^29.1.5",
+    "typescript": "^5.5.3"
   },
   "dependencies": {
     "debug": "^4.2.0"
