--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+        with:
+          node-version: latest
       - uses: FedericoCarboni/setup-ffmpeg@v3
       - run: npm ci
       - run: npm test
